--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "3.4.4",
     "react-toastify": "^6.0.9",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
