--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.7.2",
+    "axios": "^0.21.0",
     "firebase": "^7.24.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
