--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.10",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "slugify": "^1.4.6"
   }
 }
